tests/NormalTests/paczka1/fuzzy1/36101377.err
Error in line 6: 2i2AV S584 0,91
Error in line 16: JSQYtZtml S584 79,3
Error in line 20: J6gQ A510 27,5
Error in line 10: hFKR4 A510 7,0
